--- a/game2048/src/main/res/values/strings.xml
+++ b/game2048/src/main/res/values/strings.xml
@@ -1,3 +1,14 @@
 <resources>
     <string name="app_name">Game2048</string>
+
+    <string name="title_activity_fullscreen">FullscreenActivity</string>
+    <string name="dummy_button">Dummy Button</string>
+    <string name="dummy_content">DUMMY\nCONTENT</string>
+
+    <string name="restart_game">重开</string>
+    <string name="revert">后退</string>
+    <string name="settings">设置</string>
+    <string name="title_activity_game">Game</string>
+    <string name="score_title">得分:</string>
+    <string name="record_title">记录:</string>
 </resources>
