--- a/game2048/src/main/res/values/strings.xml
+++ b/game2048/src/main/res/values/strings.xml
@@ -11,4 +11,20 @@
     <string name="title_activity_game">Game</string>
     <string name="score_title">得分:</string>
     <string name="record_title">记录:</string>
+    <string name="title_activity_main">MainActivity</string>
+    <string name="action_settings">Settings</string>
+
+    <string name="fullscreen">全屏模式</string>
+    <string name="gameItem_size">个数</string>
+
+    <string-array name="size_value">
+        <item> 3</item>
+        <item> 4</item>
+        <item> 5</item>
+    </string-array>
+    <string-array name="size">
+        <item> 1</item>
+        <item> 2</item>
+        <item> 3</item>
+    </string-array>
 </resources>
