--- a/systemwidget/src/main/res/values/strings.xml
+++ b/systemwidget/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="right">Right Button</string>
 
     <string name="title">Title</string>
+    <string name="title_activity_test">TestActivity</string>
 </resources>
