--- a/inputdemo/src/main/res/values/strings.xml
+++ b/inputdemo/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">InputDemo</string>
     <string name="action_settings">Settings</string>
+    <string name="button_close">关闭</string>
+    <string name="button_play_pause">打开/暂停</string>
 </resources>
