--- a/inputdemo/src/main/res/values/strings.xml
+++ b/inputdemo/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="action_settings">Settings</string>
     <string name="button_close">关闭</string>
     <string name="button_play_pause">打开/暂停</string>
+    <string name="button_back_to_normal">回到正常播放画面</string>
 </resources>
